First component created . Css applied.

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.title{
+  padding: 15px;
+  margin: 15px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
